# uefi-hello-world

./: .gitignore  Cargo.toml  Readme.md  rust-toolchain.toml  x86_64-pc-uefi-msvc.json
.cargo/: config.toml
uefi-hello-world/: Cargo.toml  build.rs
uefi-hello-world/src/: intrinsics.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
