# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "uefi-hello-world"
version         = "0.1.0"
edition         = "2018"
publish         = false

[dependencies]
bytemuck        = "1"
rlibc           = "1"
wchar           = "0.10"
uefi            = "0.11"

[build-dependencies]
png             = "0.16"
